implement actor skills

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -87,6 +87,59 @@
           "label": "Vigor",
           "abbr": "Vigor"
         }
+      },
+
+      "skills": {
+        "awareness": "Awareness",
+        "business": "Business",
+        "deduction": "Deduction",
+        "education": "Education",
+        "language": "Language (2)",
+        "monster_lore": "Monster Lore (2)",
+        "social_etiquette": "Social Etiquette",
+        "streetwise": "Streetwise",
+        "tactics": "Tactics (2)",
+        "teaching": "Teaching",
+        "wilderness_survival": "Wilderness Survival",
+        "brawling": "Brawling",
+        "dodge": "Dodge/Escape",
+        "melee": "Melee",
+        "riding": "Riding",
+        "sailing": "Sailing",
+        "small_blades": "Small Blades",
+        "staff_spear": "Staff/Spear",
+        "swordsmanship": "Swordsmanship",
+        "archery": "Archery",
+        "athletics": "Athletics",
+        "crossbow": "Crossbow",
+        "sleight_of_hand": "Sleight of Hand",
+        "stealth": "Stealth",
+        "physique": "Physique",
+        "endurance": "Endurance",
+        "charisma": "Charisma",
+        "deceit": "Deceit",
+        "fine_arts": "Fine Arts",
+        "gambling": "Gambling",
+        "grooming_and_style": "Grooming and Style",
+        "human_perception": "Human Perception",
+        "leadership": "Leadership",
+        "persuasion": "Persuasion",
+        "performance": "Performance",
+        "seduction": "Seduction",
+        "alchemy": "Alchemy (2)",
+        "crafting": "Crafting (2)",
+        "disguise": "Disguise",
+        "first_aid": "First Aid",
+        "forgery": "Forgery",
+        "pick_lock": "Pick Lock",
+        "trap_crafting": "Trap Crafting (2)",
+        "courage": "Courage",
+        "hex_weaving": "Hex Weaving (2)",
+        "intimidation": "Intimidation",
+        "spell_casting": "Spell Casting (2)",
+        "resist_magic": "Resist Magic (2)",
+        "resist_coercion": "Resist Coercion",
+        "ritual_crafting": "Ritual Crafting (2)"
       }
     },
     "actor_sheet": {
