add roll ability to profession skills

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -160,7 +160,8 @@
 
     "rolls": {
       "ability_prompt_title": "{ability} Ability Check",
-      "skill_prompt_title": "{skill} Skill Check"
+      "skill_prompt_title": "{skill} Skill Check",
+      "profession_skill_prompt_title": "{skill} Profession Skill Check"
     }
   }
 }
